Added vm.component to app.component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -342,4 +342,5 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<app-vm />
 <router-outlet />
