--- a/src/app/modules/vm/components/vm-details/vm-details.component.html
+++ b/src/app/modules/vm/components/vm-details/vm-details.component.html
@@ -3,10 +3,6 @@
 
     <div class="details">
         <div class="detail-item">
-            <label>ID:</label>
-            <span>{{ vm.id }}</span>
-        </div>
-        <div class="detail-item">
             <label>Nombre de la VM:</label>
             <span>{{ vm.vmName }}</span>
         </div>
@@ -72,7 +68,7 @@
         <button (click)="vm.id !== undefined ? editVm(vm.id) : null">
             Editar
         </button>
-        <button (click)="vm.id !== undefined ? editVm(vm.id) : null">
+        <button (click)="vm.id !== undefined ? deleteVm(vm.id) : null">
             Eliminar
         </button>
     </div>
