--- a/src/app/modules/vm/components/vm-form/vm-form.component.html
+++ b/src/app/modules/vm/components/vm-form/vm-form.component.html
@@ -59,6 +59,6 @@
             <label for="disk">Disk (GB):</label>
             <input type="number" id="disk" formControlName="disk" />
         </div>
-        <button type="submit" [disabled]="vmForm.pristine">{{ vmId ? 'Actualizar' : 'Crear' }}</button>
+        <button type="submit" [disabled]="vmId ? vmForm.pristine : !vmForm.valid">{{ vmId ? 'Actualizar' : 'Crear' }}</button>
     </form>
 </div>
