Updated header component

--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -4,6 +4,6 @@
     </div>
     <nav class="nav">
         <a routerLink="/vms" class="nav-link">Máquinas Virtuales</a>
-        <a routerLink="/crear-vm" class="nav-link">Crear VM</a>
+        <a routerLink="/vms/register" class="nav-link">Registrar Máquina Virtual</a>
     </nav>
 </header>
