--- a/src/app/modules/vm/components/vm-form/vm-form.component.html
+++ b/src/app/modules/vm/components/vm-form/vm-form.component.html
@@ -1,64 +1,147 @@
-<div class="container">
-    <h2>{{ vmId ? "Editar Máquina Virtual" : "Crear Máquina Virtual" }}</h2>
+<div class="container mt-5">
+    <h2 class="text-center mb-4">
+        {{ vmId ? "Editar Máquina Virtual" : "Crear Máquina Virtual" }}
+    </h2>
 
     <form [formGroup]="vmForm" (ngSubmit)="onSubmit()">
-        <div>
+        <div class="form-group mb-3">
             <label for="vmName">VM Name:</label>
-            <input type="text" id="vmName" formControlName="vmName" required />
+            <input
+                class="form-control"
+                type="text"
+                id="vmName"
+                formControlName="vmName"
+                required
+            />
         </div>
         <div>
             <label for="ip">IP:</label>
-            <input type="text" id="ip" formControlName="ip" required />
+            <input
+                class="form-control"
+                type="text"
+                id="ip"
+                formControlName="ip"
+                required
+            />
         </div>
-        <div>
+        <div class="form-group mb-3">
             <label for="dnsName">DNS Name:</label>
             <input
+                class="form-control"
                 type="text"
                 id="dnsName"
                 formControlName="dnsName"
                 required
             />
         </div>
-        <div>
+        <div class="form-group mb-3">
             <label for="project">Project:</label>
-            <input type="text" id="project" formControlName="project" />
+            <input
+                class="form-control"
+                type="text"
+                id="project"
+                formControlName="project"
+            />
         </div>
-        <div>
+        <div class="form-group mb-3">
             <label for="environment">Environment:</label>
-            <input type="text" id="environment" formControlName="environment" />
+            <textarea
+                class="form-control"
+                type="text"
+                id="environment"
+                formControlName="environment"
+            ></textarea>
         </div>
-        <div>
+        <div class="form-group mb-3">
             <label for="status">Status:</label>
-            <input type="text" id="status" formControlName="status" required />
+            <select
+                class="form-control"
+                id="status"
+                formControlName="status"
+                required
+            >
+			<option *ngFor="let status of vmStatuses" [value]="status">{{ status }}</option>
+			</select>
         </div>
-        <div>
+        <div class="form-group mb-3">
             <label for="comment">Comment:</label>
-            <textarea id="comment" formControlName="comment"></textarea>
+            <textarea
+                class="form-control"
+                id="comment"
+                formControlName="comment"
+            ></textarea>
         </div>
-        <div>
+        @if (vmId) {
+		<div class="form-group mb-3">
+			<label for="reservedUserName">Reserved User Name:</label>
+			<input
+				class="form-control"
+				type="text"
+				id="reservedUserName"
+				formControlName="reservedUserName"
+			/>
+		</div>
+        <div class="form-group mb-3">
             <label for="reservedTo">Reserved To:</label>
-            <input type="text" id="reservedTo" formControlName="reservedTo" />
+            <input
+                class="form-control"
+                type="text"
+                id="reservedTo"
+                formControlName="reservedTo"
+            />
         </div>
-        <div>
+        }
+        <div class="form-group mb-3">
             <label for="operatingSystem">Operating System:</label>
             <input
+                class="form-control"
                 type="text"
                 id="operatingSystem"
                 formControlName="operatingSystem"
             />
         </div>
-        <div>
+        <div class="form-group mb-3">
             <label for="cpuCores">CPU Cores:</label>
-            <input type="number" id="cpuCores" formControlName="cpuCores" />
+            <input
+                class="form-control"
+                type="number"
+                id="cpuCores"
+                formControlName="cpuCores"
+            />
         </div>
-        <div>
+		<div class="form-group mb-3">
+			<label for="gpu">GPU:</label>
+			<input
+				class="form-control"
+				type="text"
+				id="gpu"
+				formControlName="gpu"
+			/>
+		</div>
+        <div class="form-group mb-3">
             <label for="ram">RAM (GB):</label>
-            <input type="number" id="ram" formControlName="ram" />
+            <input
+                class="form-control"
+                type="number"
+                id="ram"
+                formControlName="ram"
+            />
         </div>
-        <div>
+        <div class="form-group mb-3">
             <label for="disk">Disk (GB):</label>
-            <input type="number" id="disk" formControlName="disk" />
+            <input
+                class="form-control"
+                type="number"
+                id="disk"
+                formControlName="disk"
+            />
         </div>
-        <button type="submit" [disabled]="vmId ? vmForm.pristine : !vmForm.valid">{{ vmId ? 'Actualizar' : 'Crear' }}</button>
+        <button
+            type="submit"
+            [disabled]="vmId ? vmForm.pristine : !vmForm.valid"
+            class="btn btn-primary"
+        >
+            {{ vmId ? "Actualizar" : "Crear" }}
+        </button>
     </form>
 </div>
