--- a/src/app/modules/vm/components/vm-list/vm-list.component.html
+++ b/src/app/modules/vm/components/vm-list/vm-list.component.html
@@ -1,35 +1,72 @@
-<div class="container">
-    <h2>Lista de Máquinas Virtuales</h2>
+<div class="container mt-5">
+    <h2 class="text-center mb-4">Lista de Máquinas Virtuales</h2>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Nombre</th>
-                <th>IP</th>
-                <th>DNS</th>
-                <th>Proyecto</th>
-                <th>Entorno</th>
-                <th>Estado</th>
-                <th>Reservado Desde</th>
-                <th>Reservado Hasta</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let vm of vms">
-                <td>{{ vm.vmName }}</td>
-                <td>{{ vm.ip }}</td>
-                <td>{{ vm.dnsName }}</td>
-                <td>{{ vm.project }}</td>
-                <td>{{ vm.environment }}</td>
-                <td>{{ vm.status }}</td>
-                <td>{{ vm.reservedFrom === undefined ? null : vm.reservedFrom | dateFormatter }}</td>
-                <td>{{ vm.reservedTo === undefined ? null : vm.reservedTo | dateFormatter }}</td>
-                <td class="actions">
-                    <button (click)="viewDetails(vm.id)">Detalles</button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-	<button (click)="createVm()" class="btn btn-primary">Crear Nueva Máquina Virtual</button>
+    <div
+        class="filter-container d-flex justify-content-end align-items-center mb-3"
+    >
+        <div class="d-flex">
+            <i class="bi bi-funnel-fill me-2"></i>
+            <!-- Icono de filtro, asegúrate de incluir Bootstrap Icons -->
+            <label for="statusFilter" class="me-2">Filtrar por Estado:</label>
+            <select
+                id="statusFilter"
+                class="form-select"
+                [(ngModel)]="selectedStatus"
+                (change)="filterVms()"
+                style="width: auto"
+            >
+                <option value="">Todos</option>
+                <option value="Disponible">Disponible</option>
+                <option value="Instalando">Instalando</option>
+                <option value="Reservada">Reservada</option>
+                <option value="Parada">Parada</option>
+            </select>
+        </div>
+    </div>
+
+    <ul class="list-group">
+        <li
+            *ngFor="let vm of filteredVms"
+            class="list-group-item d-flex flex-column"
+            (click)="openDialog(vm.id!)"
+            style="cursor: pointer"
+        >
+            <div class="d-flex justify-content-between align-items-center mb-2">
+                <span class="fw-bold">{{ vm.vmName }}</span>
+                <span
+                    class="badge rounded-pill"
+                    [ngClass]="{
+                        'badge-disponible': vm.status === 'Disponible',
+                        'badge-instalando': vm.status === 'Instalando',
+                        'badge-reservada': vm.status === 'Reservada',
+                        'badge-parada': vm.status === 'Parada'
+                    }"
+                    >{{ vm.status }}</span
+                >
+            </div>
+            <div class="d-flex justify-content-between">
+                <span><strong>IP:</strong> {{ vm.ip }}</span>
+                <span><strong>DNS:</strong> {{ vm.dnsName }}</span>
+                <span><strong>Proyecto:</strong> {{ vm.project }}</span>
+                <span><strong>Entorno:</strong> {{ vm.environment }}</span>
+            </div>
+            <div
+                *ngIf="vm.status === 'Reservada'"
+                class="d-flex justify-content-between"
+            >
+                <span
+                    ><strong>Reservado Por:</strong>
+                    {{ vm.reservedUserName }}</span
+                >
+                <span
+                    ><strong>Reservado Desde:</strong>
+                    {{ vm.reservedFrom | date : "short" }}</span
+                >
+                <span
+                    ><strong>Reservado Hasta:</strong>
+                    {{ vm.reservedTo | date : "short" }}</span
+                >
+            </div>
+        </li>
+    </ul>
 </div>
