--- a/src/app/modules/vm/components/vm-list/vm-list.component.scss
+++ b/src/app/modules/vm/components/vm-list/vm-list.component.scss
@@ -1,69 +1,48 @@
+@import 'styles/_variables.scss';
+
 .container {
-	max-width: 1000px;
-	margin: 0 auto;
+	background-color: #fff;
 	padding: 20px;
-	background: #f9f9f9;
 	border-radius: 8px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
-	text-align: center;
-	margin-bottom: 20px;
+	color: $secondary-color;
 }
 
-table {
-	width: 100%;
-	border-collapse: collapse;
-	margin-top: 20px;
-}
-
-th,
-td {
-	padding: 10px;
-	border: 1px solid #ddd;
-	text-align: left;
-}
-
-th {
-	background-color: #f2f2f2;
-}
-
-.actions {
-	display: flex;
-	gap: 10px;
-}
-
-.actions button {
-	padding: 5px 10px;
-	border: none;
+.list-group-item {
+	background-color: #f9f9f9;
+	border: 2px solid #dee2e6;
+	margin-bottom: 10px;
 	border-radius: 4px;
-	cursor: pointer;
-	transition: background-color 0.3s;
-}
+	&:hover {
+		background-color: #ffcc80;
+	}
 
-.actions button:first-child {
-	background: #6c757d;
-	color: #fff;
-}
+	.badge-disponible {
+		background-color: green;
+	}
 
-.actions button:nth-child(2) {
-	background: #007bff;
-	color: #fff;
-}
+	.badge-instalando {
+		background-color: blue;
+	}
 
-.actions button:last-child {
-	background: #dc3545;
-	color: #fff;
-}
+	.badge-reservada {
+		background-color: orange;
+	}
 
-.actions button:first-child:hover {
-	background: darken(#6c757d, 10%);
-}
+	.badge-parada {
+		background-color: red;
+	}
 
-.actions button:nth-child(2):hover {
-	background: darken(#007bff, 10%);
-}
+	.btn-info {
+		background-color: $primary-color;
+		border-color: $primary-color;
 
-.actions button:last-child:hover {
-	background: darken(#dc3545, 10%);
+		&:hover {
+			background-color: lighten($primary-color, 10%);
+			border-color: lighten($primary-color, 10%);
+		}
+	}
 }
