Updated vm-dialog to adjust to SOLID

--- a/src/app/modules/vm/components/vm-dialog/vm-dialog.component.html
+++ b/src/app/modules/vm/components/vm-dialog/vm-dialog.component.html
@@ -2,41 +2,15 @@
 <div class="dialog-container">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            @if (contentToShow === 'Details') {
-            	<app-vm-details [vmId]="vmId"/>
+            @if (contentToShow === dialogType.Details) {
+            	<app-vm-details [vmId]="vmId" (showEdit)="showEdit()" (showReserve)="showReserve()" (closeDialog)="closeDialog()" />
 			}
-			@if (contentToShow === 'Edit') {
-				<app-vm-edit [vmId]="vmId"/>
+			@if (contentToShow === dialogType.Edit) {
+				<app-vm-edit [vmId]="vmId" />
 			}
-			@if (contentToShow === 'Reserve') {
-				<app-vm-reserve [vmId]="vmId"/>
+			@if (contentToShow === dialogType.Reserve) {
+				<app-vm-reserve [vmId]="vmId" (returnToDetails)="showDetails()" (closeDialog)="closeDialog()"/>
 			}
-
-            <div class="modal-footer d-flex justify-content-center">
-                @if (vmId !== 0){
-                <button
-                    type="button"
-                    class="btn btn-success"
-                    (click)="openReserve()"
-                >
-                    Reservar
-                </button>
-                <button
-                    type="button"
-                    class="btn btn-primary"
-                    (click)="openEdit()"
-                >
-                    Editar
-                </button>
-                <button
-                    type="button"
-                    class="btn btn-danger"
-                    (click)="deleteVm()"
-                >
-                    Eliminar
-                </button>
-                }
-            </div>
         </div>
     </div>
 </div>
