--- a/src/app/modules/vm/components/vm-dialog/vm-dialog.component.scss
+++ b/src/app/modules/vm/components/vm-dialog/vm-dialog.component.scss
@@ -22,8 +22,16 @@
 	z-index: 1000;
 }
 
-.btn {
-	margin: 10px;
-	border-radius: 5px;
-	cursor: pointer;
+@media (max-width: 768px) {
+	.dialog-container {
+		max-width: 95%;
+		min-height: 300px;
+	}
+}
+
+@media (max-width: 480px) {
+	.dialog-container {
+		max-width: 100%;
+		min-height: 200px;
+	}
 }
