Added vm-edit to vm-dialog component and updated styles

--- a/src/app/modules/vm/components/vm-dialog/vm-dialog.component.html
+++ b/src/app/modules/vm/components/vm-dialog/vm-dialog.component.html
@@ -6,7 +6,7 @@
             	<app-vm-details [vmId]="vmId" (showEdit)="showEdit()" (showReserve)="showReserve()" (closeDialog)="closeDialog()" />
 			}
 			@if (contentToShow === dialogType.Edit) {
-				<app-vm-edit [vmId]="vmId" />
+				<app-vm-edit [vmId]="vmId" (returnToDetails)="showDetails()" (closeDialog)="closeDialog()"/>
 			}
 			@if (contentToShow === dialogType.Reserve) {
 				<app-vm-reserve [vmId]="vmId" (returnToDetails)="showDetails()" (closeDialog)="closeDialog()"/>
