--- a/src/app/modules/vm/components/vm-dialog/vm-dialog.component.scss
+++ b/src/app/modules/vm/components/vm-dialog/vm-dialog.component.scss
@@ -20,18 +20,13 @@
 	background-color: #f9f9f9;
 	border-radius: 8px;
 	z-index: 1000;
+	max-height: 95vh;
+	overflow-y: auto;
+	display: flex;
+	flex-direction: column;
 }
 
-@media (max-width: 768px) {
-	.dialog-container {
-		max-width: 95%;
-		min-height: 300px;
-	}
-}
-
-@media (max-width: 480px) {
-	.dialog-container {
-		max-width: 100%;
-		min-height: 200px;
-	}
+.modal-content {
+	padding: 20px;
+    max-height: 80vh;
 }
