--- a/src/app/modules/vm/components/vm-list/vm-list.component.html
+++ b/src/app/modules/vm/components/vm-list/vm-list.component.html
@@ -1,5 +1,7 @@
 <div class="container mt-5">
-    <h2 class="text-center mb-4">Lista de Máquinas Virtuales</h2>
+    <div class="header">
+        <h2 class="text-center mb-4 title">Lista de Máquinas Virtuales</h2>
+    </div>
 
     <div
         class="filter-container d-flex justify-content-end align-items-center mb-3"
@@ -7,7 +9,7 @@
         <div class="d-flex">
             <i class="bi bi-funnel-fill me-2"></i>
             <!-- Icono de filtro, asegúrate de incluir Bootstrap Icons -->
-            <label for="statusFilter" class="me-2">Filtrar por Estado:</label>
+            <label for="statusFilter" class="filter me-2">Filtrar por Estado:</label>
             <select
                 id="statusFilter"
                 class="form-select"
