--- a/src/app/modules/vm/components/vm-list/vm-list.component.scss
+++ b/src/app/modules/vm/components/vm-list/vm-list.component.scss
@@ -7,8 +7,25 @@
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-h2 {
-	color: $secondary-color;
+.header {
+	background-color: $primary-color;
+	color: #f9f9f9;
+	border-top-left-radius: 8px;
+	border-top-right-radius: 8px;
+	margin-bottom: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.title {
+	padding-top: 20px;
+	flex-grow: 1;
+	text-align: center;
+}
+
+.filter {
+	padding-top: 6px;
 }
 
 .list-group-item {
